src/objects/Staging_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Adjudicated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjudicated By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staging Details</relationshipLabel>
        <relationshipName>Staging_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjudicated_Stage__c</fullName>
        <label>Adjudicated Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IIIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IIIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IIIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculated_Stage_Value__c</fullName>
        <label>Calculated Stage Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Stage__c</fullName>
        <label>Calculated Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letarality__c</fullName>
        <label>Letarality</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metastasis__c</fullName>
        <label>Metastasis</label>
        <picklist>
            <picklistValues>
                <fullName>M0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modifier_classification_done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>y-classification done during/following initial therapy</description>
        <inlineHelpText>y-classification done during/following initial therapy</inlineHelpText>
        <label>Modifier classification done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modifier_designates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a-designates the staging done at autopsy</description>
        <inlineHelpText>a-designates the staging done at autopsy</inlineHelpText>
        <label>Modifier designates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modifier_indicates_recurrent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>r-indicates a recurrent tumor</description>
        <inlineHelpText>r-indicates a recurrent tumor</inlineHelpText>
        <label>Modifier indicates recurrent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modifier_multiple_primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>m-multiple primary tumors in a single site</description>
        <inlineHelpText>m-multiple primary tumors in a single site</inlineHelpText>
        <label>Modifier multiple primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_Type__c</fullName>
        <label>Node Type</label>
        <picklist>
            <picklistValues>
                <fullName>N0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N0i+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1mic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N2a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N2b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N0i-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient_Custom__c</referenceTo>
        <relationshipLabel>Staging Details</relationshipLabel>
        <relationshipName>Staging_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Staging Details</relationshipLabel>
        <relationshipName>Staging_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staging_Modifier_Type__c</fullName>
        <label>Staging Modifier Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathological Staging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>T4_Tumor_final_status__c</fullName>
        <label>T4 Tumor final status</label>
        <picklist>
            <picklistValues>
                <fullName>Skin only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin and chest wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflammatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No skin involvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tumor_Type__c</fullName>
        <label>Tumor Type</label>
        <picklist>
            <picklistValues>
                <fullName>T0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1mic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_StagingDetail_Id__c</fullName>
        <label>pg_StagingDetail_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Staging Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>